# PortfolioOptimizerEfficientFrontier

./: README.md  backtest.py  efficient_frontier.py  main.py  portfolio_optimizer.py  pyproject.toml  requirements.txt  rpc_client.py  trading_strategy.py
data/: historical_data.csv  openbb_data.py
