[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""

[tool.poetry.dependencies]
python = "^3.8"
backtrader = "1.9.76.123"
pandas = "1.3.5"
numpy = "1.21.5"
matplotlib = "3.5.1"
seaborn = "0.11.2"
scipy = "1.7.3"
eth-account = "0.6.5"
web3 = "5.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
