[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
backtrader = "1.9.76.123"
pandas = "1.3.5"
numpy = "1.21.5"
matplotlib = "3.5.1"
seaborn = "0.11.2"
scipy = "1.7.3"
web3 = "5.24.0"
pyportfolioopt = "^1.4.1"
pyfopt = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
